# UniversityTasks

Computer-Workshop/: README.md
Computer-Workshop/Lab4-MakeFile/: MakeFile
Computer-Workshop/Reports/: 1.docx  2.docx  3.docx  4.docx  5.docx
Internet-Technology/: LICENSE  README.md  index.html
Internet-Technology/HTML&CSS/1/: poem.html
Internet-Technology/HTML&CSS/2/: weather.html
Internet-Technology/HTML&CSS/3/: poem.html
Internet-Technology/HTML&CSS/4/: hyperlink.html
Internet-Technology/HTML&CSS/5/: FORTRAN1.txt  FORTRAN2.txt  fortran1.html  fortran2.html
Internet-Technology/HTML&CSS/6/: description.html  header.html  map.html  menu.html  neva-site.html  table.html
Internet-Technology/HTML&CSS/7/: font.css  fortran1.html  fortran2.html  href.css  table.css
Internet-Technology/JavaScript/: index.html
Internet-Technology/PersonalTask/: TODO.txt  data.txt  index.html  request.json  script.js  script.ts  server.js  style.css  tsconfig.json
Internet-Technology/Table/: index.html
MathCadd/11/: 111_5 рабочий.xmcd  111_7.xmcd
MathCadd/2/: 1.xmcd  2.xmcd
MathCadd/3/: 1.xmcd  2.xmcd
MathCadd/4/: 4.xmcd
MathCadd/6/: 1(6_variant).xmcd  1(7_variant).xmcd
MathCadd/8/: 81_5.xmcd  82_5.xmcd
Programming-On-High-Level-Language/: .gitignore  README.md
Programming-On-High-Level-Language/Qt/: README.md
Programming-On-High-Level-Language/Qt/TableLab/: data.csv  data.txt  data_2.csv  data_2.txt  dialog.cpp  dialog.h  dialog.ui  dialogshow.h  exception.cpp  exception.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.qrc  mainwindow.ui  qtableheader.cpp  qtableheader.h  tablegroupmodel.cpp  tablegroupmodel.h  tablelab.pro  tablemodel.cpp  tablemodel.h  tablesharedmodel.cpp  tablesharedmodel.h
Programming-On-High-Level-Language/Qt/ThreadsLab/: countworker.cpp  countworker.h  dialogshow.cpp  dialogshow.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  threadslab.pro  writeworker.cpp  writeworker.h
Programming-On-High-Level-Language/SDL2/LAB1/: LAB1.sln
Programming-On-High-Level-Language/WinApi/: README.md
Programming/отчёт прога/: ~$чёт 2 лаба структура.docx  ~$чёт 3 лаба структура.docx
VisualProgramming/1/1Pochta/: .gitignore  CMakeLists.txt
VisualProgramming/1/1Pochta/src/: mainwindow.cpp
VisualProgramming/1/2Mail/: CMakeLists.txt
VisualProgramming/1/2Mail/src/: mainwindow.cpp  mainwindow.h
VisualProgramming/1/QML/: CMakeLists.txt
VisualProgramming/1/QML/src/: TimerInput.qml  main.cpp  main.qml  qml.qrc  worker.js
VisualProgramming/2/: CMakeLists.txt
VisualProgramming/2/src/: main.cpp  mainwindow.cpp  windowFrom1Laba.ui
VisualProgramming/2/src/Core/: customuiloader.cpp  customuiloader.h  customuiloader.layout.cpp  customuiloader.variant.cpp  customuiloader.widget.cpp
VisualProgramming/3/: CMakeLists.txt
VisualProgramming/3/data/: food.txt  food.xlsx
VisualProgramming/3/src/: Client.h  DishTableModel.cpp  DishTableModel.h  FinishModel.cpp  FinishModel.h  Food.cpp  Food.h  MainWindow.cpp  MainWindow.h  MainWindow.ui  OrderModel.cpp  OrderModel.h  QueueModel.cpp  QueueModel.h  Simulator.cpp  Simulator.h  main.cpp
VisualProgramming/4/: .gitignore  CMakeLists.txt  MainWindow.cpp  MainWindow.h  MainWindow.ui
VisualProgramming/task/: Variant_7.docx
Архитектура ЭВМ/1/: Design1.ms14  desktop.ini  Булевая логика.ms14
Архитектура ЭВМ/2/: .ms14  2.ms14 (Security copy)  Decoder.ms14 (Security copy)  Multiplexer.ms14  Multiplexer.ms14 (Security copy)  Multiplicator.ms14 (Security copy)
Микроэлектронника/1/: led.ms14  led.ms14 (Security copy)  normal.ms14  normal.ms14 (Security copy)  reverse.ms14  reverse.ms14 (Security copy)  table.xlsx
Микроэлектронника/2/: 2.xlsx  Design1.ms14 (Security copy)  full bridge.ms14  full bridge.ms14 (Security copy)  full-wave.ms14  half-wave.ms14  half-wave.ms14 (Security copy)  voltage ratio factor.ms14  voltage ratio factor.ms14 (Security copy)
Микроэлектронника/3/: basic shunt regulator.ms14  basic shunt regulator.ms14 (Security copy)  cascaded shunt regulator.ms14  cascaded shunt regulator.ms14 (Security copy)  lab3.ms14 (Security copy)  shunt regulator.ms14 (Security copy)  temp compensated shunt regulator.ms14  temp compensated shunt regulator.ms14 (Security copy)
Микроэлектронника/4/: 1.ms14  1.xlsx  1_TRY.ms14  1_TRY.ms14 (Security copy)  2.ms14  2.ms14 (Security copy)  2.xlsx  lab4 (1).docx  И582_ДубровскийВИ_ФОМ_Лаба4.docx
(+236 files in other folders)
